--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/MemberRegister.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/MemberRegister.cshtml
@@ -28,7 +28,7 @@
 </h1>
 <div class="mb-4">
     <a href="@Url.Page("./FindOrganization")">
-        <i class="fas fa-chevron-left"></i>Back
+        <i class="fas fa-chevron-left me-1"></i>Back
     </a>
 </div>
 
