--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/CreateMember.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/CreateMember.cshtml
@@ -18,13 +18,14 @@
 }
 
 
-<h4 class="mb-2 fw-semibold">
+<h1 class="mb-1 h3">
     Create Your Member Account
-</h4>
-<a class="d-block mb-4" href="@Url.Page("./MemberRegister")">
-    <i class="fas fa-arrow-left"></i>
-    Back
-</a>
+</h1>
+<div class="mb-4">
+    <a href="@Url.Page("./MemberRegister")">
+        <i class="fas fa-chevron-left"></i>Back
+    </a>
+</div>
 
 <p>
     Fill out the simple form below to register as a member in your organization.
