--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/MemberRegister.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/MemberRegister.cshtml
@@ -24,7 +24,7 @@
 }
 
 <h1 class="mb-1 h3">
-    Join Your Organization
+    Welcome to Your Organization - Sign Up Here!
 </h1>
 <div class="mb-4">
     <a href="@Url.Page("./FindOrganization")">
