--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/MainApp.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/MainApp.cshtml
@@ -24,7 +24,7 @@
 
         <div class="d-flex justify-content-center my-4">
             <h3>
-                @Model.UserAccountInfo.Organization
+                @Model.UserAccountInfo.TenantName
             </h3>
         </div>
 
