--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/Login.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/Login.cshtml
@@ -267,7 +267,7 @@
 </div>
 
 
-<form method="post" data-bind="visible: formVisible">
+<div data-bind="visible: formVisible">
 
     <p data-bind="visible: isUsingUserName">
         Let's find your account! Enter your username and click 'Continue'.
@@ -278,37 +278,40 @@
     </p>
 
     <p>
-        Don't have an account? 
+        Don't have an account?
         No worries, <a href="@Url.Page("/Account/MemberRegister", new { AutoRedirect = true })">Sign up</a> to join your organization.
     </p>
 
-    <div class="mb-3" data-bind="visible: isUsingUserName">
-        <label for="Input_UserName" class="form-label">@L["DisplayName:UserName"]<span class="text-danger ms-1">*</span></label>
-        <input asp-for="Input.UserName" class="form-control" autocomplete="username" />
-        <span asp-validation-for="Input.UserName" class="text-danger"></span>
-    </div>
+    <form method="post">
 
-    <div class="mb-3" data-bind="visible: isUsingEmail">
-        <label for="Input_EmailAddress" class="form-label">@L["DisplayName:EmailAddress"]<span class="text-danger ms-1">*</span></label>
-        <input asp-for="Input.EmailAddress" class="form-control" autocomplete="email" type="email" />
-        <span asp-validation-for="Input.EmailAddress" class="text-danger"></span>
-    </div>
-
-    <div class="form-check mb-3">
-        <input asp-for="Input.IsUsingUserName" class="form-check-input" type="checkbox" aria-describedby="IsUsingUserNameHelp">
-        <label class="form-check-label" for="Input_IsUsingUserName">
-            Enable Username Lookup
-        </label>
-        <div id="IsUsingUserNameHelp" class="form-text">                
-            Switch to search by Username (otherwise, search by email).
+        <div class="mb-3" data-bind="visible: isUsingUserName">
+            <label for="Input_UserName" class="form-label">@L["DisplayName:UserName"]<span class="text-danger ms-1">*</span></label>
+            <input asp-for="Input.UserName" class="form-control" autocomplete="username" />
+            <span asp-validation-for="Input.UserName" class="text-danger"></span>
         </div>
-    </div>
 
-    <div class="d-grid gap-2">
-        <abp-button type="submit" button-type="Primary" name="Action" value="Input" class="mt-3">
-            @L["Continue"]
-            <span class="spinner-box">
-            </span>
-        </abp-button>
-    </div>
-</form>
+        <div class="mb-3" data-bind="visible: isUsingEmail">
+            <label for="Input_EmailAddress" class="form-label">@L["DisplayName:EmailAddress"]<span class="text-danger ms-1">*</span></label>
+            <input asp-for="Input.EmailAddress" class="form-control" autocomplete="email" type="email" />
+            <span asp-validation-for="Input.EmailAddress" class="text-danger"></span>
+        </div>
+
+        <div class="form-check mb-3">
+            <input asp-for="Input.IsUsingUserName" class="form-check-input" type="checkbox" aria-describedby="IsUsingUserNameHelp">
+            <label class="form-check-label" for="Input_IsUsingUserName">
+                Enable Username Lookup
+            </label>
+            <div id="IsUsingUserNameHelp" class="form-text">
+                Switch to search by Username (otherwise, search by email).
+            </div>
+        </div>
+
+        <div class="d-grid gap-2">
+            <abp-button type="submit" button-type="Primary" name="Action" value="Input" class="mt-3">
+                @L["Continue"]
+                <span class="spinner-box">
+                </span>
+            </abp-button>
+        </div>
+    </form>
+</div>
