Normalize path segment

--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/CreateMember.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/CreateMember.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/account/join"
 @using Microsoft.AspNetCore.Mvc.Localization
 @using Microsoft.Extensions.Localization
 @using Volo.Abp.Account.Localization
