--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/LocalLogin.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/LocalLogin.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/account/verify-password"
 @using Microsoft.AspNetCore.Mvc.Localization
 @using Microsoft.Extensions.Localization
 @using Volo.Abp.Account.Localization
