--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/RegisterDefineAdmin.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/RegisterDefineAdmin.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/organization/sign-up/admin"
 @using Microsoft.AspNetCore.Mvc.Localization
 @using Microsoft.Extensions.Localization
 @using Volo.Abp.Account.Localization
