--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/MainApp.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/MainApp.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/auth/redirect"
 @using Microsoft.AspNetCore.Mvc.Localization
 @using Microsoft.Extensions.Localization
 @using Volo.Abp.Account.Localization
