--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/RegisterConfirm.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/RegisterConfirm.cshtml
@@ -15,19 +15,29 @@
     ViewBag.Keywords = "organization registration,review information,confirm,create account";
 }
 
-<h4 class="mb-4 fw-semibold">
-    Create your organization account
-</h4>
-
-<div class="progress">
-    <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 100%"></div>
+<h1 class="mb-1 fs-3">
+    Create an Organization Account
+</h1>
+<div class="mb-4">
+    <a href="@Url.Page("./RegisterDefineAdmin")">
+        <i class="fas fa-chevron-left me-1"></i>Back
+    </a>
 </div>
 
-<form method="post" class="py-4" spellcheck="false">
-    <h5 class="mb-4">
-        <span class="badge bg-dark me-1">3/3</span>
-        Last, please review the information below and submit it
-    </h5>
+<div class="progress mb-3">
+    <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" style="width: 100%"></div>
+</div>
+
+<h2 class="mb-4 fs-5">
+    <span class="badge bg-secondary me-1">Step 3</span>
+    Review & Submit: Launch Your Organization
+</h2>
+
+<p>
+    One last step! Review your information and click 'Create Organization' to unlock the full potential of FormLang.
+</p>
+
+<form method="post" class="py-3" spellcheck="false">
 
     <input asp-for="Input.TenantName" type="hidden" autocomplete="off" />
     <input asp-for="Input.AdminEmailAddress" type="hidden" autocomplete="off" />
@@ -56,12 +66,9 @@
     }
 
     <div class="d-grid gap-2">
-        <abp-button type="submit" button-type="Primary" name="Action" value="Input" class="mt-3">
-            @L["Submit"]
+        <abp-button type="submit" button-type="Primary" name="Action" value="Input">
+            Create Organization
             <span class="spinner-box"></span>
-        </abp-button>
-        <abp-button type="submit" button-type="Secondary" formnovalidate="formnovalidate" name="Action" value="Cancel" class="mt-3">
-            @L["Back"]
         </abp-button>
     </div>
 </form>
