--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/RegisterDefineAdmin.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/RegisterDefineAdmin.cshtml
@@ -12,6 +12,8 @@
     ViewBag.Title = "Organization Registration - Provide Administrator Information";
     ViewBag.Description = "Provide the administrator information for your organization.";
     ViewBag.Keywords = "Provide Administrator Information, organization registration";
+    ViewBag.HideTenancyView = true;
+    ViewBag.ShowAppTitle = true;
 }
 
 <h1 class="mb-1 fs-3">
