--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/EmailActivationError.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/EmailActivationError.cshtml
@@ -17,7 +17,7 @@
     Don't worry! You can easily request a new activation link by clicking the button below.
 </p>
 
-<div class="d-grid gap-2">
+<div class="d-grid gap-2 mb-3">
     <a abp-button="Primary" asp-page="/Account/ResendActivationLink">
         Get New Activation Email
     </a>
