--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/Logout.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/Logout.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/account/sign-out"
 @model PolpAbp.Presentation.Account.Web.Pages.Account.LogoutModel
 @{
     ViewBag.Title = "Log Out";
