--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/ResetPassword.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/account/reset-password"
 @using Microsoft.AspNetCore.Mvc.Localization
 @using Microsoft.Extensions.Localization
 @using Volo.Abp.Account.Localization
@@ -12,15 +12,16 @@
     ViewBag.Title = "Reset Password";
     ViewBag.Description = "Reset your password now.";
     ViewBag.Keywords = "reset password";
+
 }
 
-<h4 class="mb-4 fw-semibold">
+<h1 class="mb-4 fs-3">
     @L["ResetPassword"]
-</h4>
+</h1>
 
-<div class="alert alert-info">
+<p>
     @L["ResetPassword_Information"]
-</div>
+</p>
 
 <form method="post">
 
@@ -28,7 +29,7 @@
     <abp-input asp-for="ResetToken" />
 
     <div class="mb-3" id="password-wrapper">
-        <label asp-for="Password" class="form-label"></label>
+        <label asp-for="Password" class="form-label"></label><span>*</span>
         <div class="input-group">
             <input asp-for="Password" class="form-control" data-auto-focus="true" autocomplete="new-password" />
             <button type="button" class="toggle-password btn btn-outline-secondary">
@@ -41,20 +42,8 @@
 
     <div class="d-grid gap-2">
         <abp-button type="submit" button-type="Primary">
-            @L["Submit"]
+            Set Password
             <span class="spinner-box"></span>
         </abp-button>
-        <a abp-button="Secondary" asp-page="./Login">
-            @L["Cancel"]
-        </a>
     </div>
 </form>
-
-<div class="d-flex flex-column align-items-start mt-5 mb-3">
-    <h6>Helpful links</h6>
-    <ul>
-        <li>
-            <a class="btn btn-link fst-italic" asp-page="./Login">@L["Login"]</a>
-        </li>
-    </ul>
-</div>
