--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/ResetPasswordSuccess.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/ResetPasswordSuccess.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/account/reset-password/success"
 @using Microsoft.AspNetCore.Mvc.Localization
 @using Microsoft.Extensions.Localization
 @using Volo.Abp.Account.Localization
@@ -15,12 +15,14 @@
     ViewBag.Keywords = "password reset success";
 }
 
-<h4 class="mb-4 fw-semibold">
-    @L["ResetPassword"]
-</h4>
+<h1 class="mb-4 fs-3">
+    Password Reset Successful!
+</h1>
 
-<p>@L["YourPasswordIsSuccessfullyReset"]</p>
+<div class="alert alert-success">
+    Your password has been successfully reset! You can now log in to your account with your new password.
+</div>
 
 <div class="d-grid gap-2">
-    <a abp-button="Primary" asp-page="./Login">@L["Login"]</a>
+    <a abp-button="Primary" asp-page="/Account/Login">Sign In</a>
 </div>
