--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/LogoutSuccess.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/LogoutSuccess.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/account/sign-out/success"
 @using Microsoft.AspNetCore.Mvc.Localization
 @using Microsoft.Extensions.Localization
 @using Volo.Abp.Account.Localization
@@ -27,12 +27,12 @@
     </script>
 }
 
-<h4 class="mb-4 fw-semibold">
-    @L["LoggedOutTitle"]
-</h4>
+<h1 class="mb-4 fs-3">
+    Sign Out Successful
+</h1>
 
 <p>
-    @L["LoggedOutText"]
+    You have successfully signed out. We hope to see you back again soon!
 </p>
 
 <div class="alert alert-warning">
@@ -41,15 +41,6 @@
     <div class="d-grid gap-2">
         <a abp-button="Info" onclick="cleanUpUserData(event);">Clean up data</a>
     </div>
-</div>
-
-<div class="d-flex flex-column align-items-start mt-5 mb-3">
-    <h6>Helpful links</h6>
-    <ul>
-        <li>
-            <a class="btn btn-link fst-italic" asp-page="./Login">@L["Login"]</a>
-        </li>
-    </ul>
 </div>
 
 <div class="toast-container position-fixed bottom-0 end-0 p-3">
