--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/UpdatePassword.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/UpdatePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/account/update-password"
 @using Microsoft.AspNetCore.Mvc.Localization
 @using Microsoft.Extensions.Localization
 @using Volo.Abp.Account.Localization
@@ -15,19 +15,21 @@
     ViewBag.Keywords = "update password";
 }
 
-<h4 class="mb-4 fw-semibold">
-    Updates Your Password
-</h4>
+<h1 class="mb-4 fs-3">
+    Update Your Password
+</h1>
 
-<div class="alert alert-info d-flex align-items-center" role="alert">
-    <div>
-        Please update your password to improve account security.
-    </div>
-</div>
+<p>
+    Welcome! To ensure the security of your data, we recommend updating your current password.
+</p>
+
+<p>
+    Please choose a new password that's hard to guess, and confirm the new password in the fields below.
+</p>
 
 <form method="post">
     <div class="mb-3" id="password-wrapper">
-        <label for="Input_Password" class="form-label">@L["DisplayName:Password"]</label>
+        <label for="Input_Password" class="form-label">@L["DisplayName:Password"]</label><span>*</span>
         <div class="input-group">
             <input class="form-control" id="Input_Password" type="password" autocomplete="new-password" asp-for="Input.Password" />
             <button type="button" class="toggle-password btn btn-outline-secondary">
@@ -39,8 +41,8 @@
     <abp-input asp-for="Input.ConfirmPassword" autocomplete="off" />
 
     <div class="d-grid gap-2">
-        <abp-button type="submit" button-type="Primary" name="Action" value="Input" class="mt-3">
-            @L["Submit"]
+        <abp-button type="submit" button-type="Primary" name="Action" value="Input">
+            Change Password
             <span class="spinner-box"></span>
         </abp-button>
     </div>
