Fixed the issues as the result of streamlining sign flow

--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/CreateMember.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/CreateMember.cshtml
@@ -33,7 +33,7 @@
 
 <form method="post">
 
-    <abp-input asp-for="Input.FirstName" autocomplete="given-name" />
+    <abp-input asp-for="Input.FirstName" autocomplete="given-name" auto-focus="true" />
     <abp-input asp-for="Input.LastName" autocomplete="family-name" />
     <abp-input asp-for="Input.EmailAddress" autocomplete="email" />
     <div class="mb-3" id="password-wrapper">
