--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/EmailActivationSuccess.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/EmailActivationSuccess.cshtml
@@ -3,7 +3,7 @@
 @model PolpAbp.Presentation.Account.Web.Pages.Account.EmailActivationSuccessModel
 @inject IBrandingProvider BrandingProvider
 @{
-    ViewBag.ShowAppTitle = true;
+    ViewBag.ShowAppTitle = false;
     ViewBag.HideTenancyView = true;
 }
 
