--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/LocalLogin.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/LocalLogin.cshtml
@@ -32,7 +32,7 @@
 
 @if (Model.ShowActivationLink)
 {
-    <div class="alert alert-warning">
+    <div class="alert alert-danger">
         <p>
             To keep things secure,
             we need you to activate your account using the link in the email we sent you. Didn't see it? No worries! We can send you a new activation email right away.
