--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/ResendActivationLink.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/ResendActivationLink.cshtml
@@ -25,8 +25,7 @@
 
 <form method="post">
 
-    <abp-input asp-for="Input.EmailAddress" auto-focus="true" type="email"
-               label="@L["DisplayName:Email"].Value" autocomplete="email" />
+    <abp-input asp-for="Input.EmailAddress" auto-focus="true" autocomplete="email" />
 
     <div class="d-grid gap-2">
         <abp-button type="submit" button-type="Primary" name="Action" value="Input" class="mt-3">
